--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1> 
-    <button id="click-me">click me</button>
+    <nav>
+        <h1>Title</h1>
+        <svg id="menu-button" fill="#ffffff" width="50" height="50" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg"><path d="M1664 1344v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45zm0-512v128q0 26-19 45t-45 19h-1408q-26 0-45-19t-19-45v-128q0-26 19-45t45-19h1408q26 0 45 19t19 45z"/></svg>
+    </nav>
+    <aside id="menu">
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+        </ul>
+    </aside>
+    <main>
+
+    </main>
     <script src="js/scripts.js"></script>
 </body>
 </html>
