--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script>
-        WebFont.load({
-            google: {
-            families: ['IBM Plex Sans:700']
-            }
-        });
-    </script>
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Document</title>
 </head>
