--- a/src/index.html
+++ b/src/index.html
@@ -4,78 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:700" rel="stylesheet">
     <title>Document</title>
-    <style>
-        body {
-    margin: 0;
-    
-}
-
-nav {
-    background-color: #f3f3f3;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-
-    transition: all .6s ease;
-    /* transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1); */
-}
-
-#open-button {
-    height: 40px;
-    margin-right: 10px;
-}
-
-#close-button {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-right: 10px;
-    height: 60px;
-}
-
-h1 {
-    margin-top: 0;
-    margin-bottom: 0;
-    margin-left: 10px;
-
-    color: #4c545c;
-
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 36px;
-}
-
-aside {
-    position: absolute;
-    top: 0;
-    left: -260px;
-    bottom: 0;
-
-    width: 260px;
-
-    background-color: #40be90;
-
-    transition: left .6s ease;
-    /* transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1); */
-}
-
-.pull {
-    left: 0;
-}
-
-.push {
-    left: 260px;
-    right: -260px;
-}
-    </style>
 </head>
 <body>
     <aside id="menu">
